scenarios/03-canary-deployment/network/virtualservice-reviews.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews 
  namespace: 03-canary-deployment
  labels: 
    scenario: 03-canary-deployment
spec: 
  hosts: 
  - reviews 
  gateway: 
  - bookinfo-gateway
  http: 
  - route: 
    - destination: 
        host: reviews
        subset: v1
      weight: 100
